samples/_failures_safe/1761391553_9ac49e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_252156bd.c: In function ‘main’:
./samples/SAFE/__tmp_252156bd.c:155:13: error: expected expression at end of input
  155 |             return
      |             ^~~~~~
./samples/SAFE/__tmp_252156bd.c:155:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_252156bd.c:155:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_252156bd.c:155:13: error: expected declaration or statement at end of input
